Fix header alignment

--- a/adhocracy-plus/assets/scss/components/_notifications.scss
+++ b/adhocracy-plus/assets/scss/components/_notifications.scss
@@ -2,7 +2,6 @@ $border-color: transparent;
 $light-blue: "#DFF6FF";
 
 .notifications_btn {
-    margin-right: 0.5em;
     width: 3em;
     height: 3em;
     border: 1px solid $gray-lightest;
